# attestation-doc-validation

./: .gitignore  Attestation.md  Cargo.toml  Dockerfile  LICENSE  Package.swift  README.md  valid-cage-cert.pem  validate.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-deploy-node-bindings.yml  build-and-deploy-python-bindings.yml  build-and-deploy-swift-bindings.yml  build-and-deploy-wasm-bindings.yml  build-and-publish-swift-bindings.yml  codeql.yml  lint-and-test.yml  publish-packages.yml  publish-rust-crate.yml  tmp-debug-version-check.yml
attestation-doc-validation/: Cargo.toml  Makefile.toml  README.md  my_header.h
attestation-doc-validation/src/: attestation.rs  attestation_doc.rs  cert.rs  error.rs  lib.rs  time.rs
attestation-doc-validation/src/nsm/: cose.rs  crypto.rs  der.rs  error.rs  mod.rs  nsm_api.rs  pkey.rs
attestation-doc-validation/test-files/: der-sample-cert-containing-attestation-doc-16-11-22-10-55  pem-sample-cert-containing-attestation-doc-16-11-22-10-55
attestation-doc-validation/tests/: live_cert_validation.rs
go-attestation-bindings/: Cargo.toml  LICENSE  Makefile  README.md  go-rust  go.mod  go_attestation_bindings.go  go_attestation_bindings_test.go  main.go
go-attestation-bindings/lib/: go_attestation_bindings.h  libgo_attestation_bindings.dylib  librustdemo.dylib  rustdemo.h
go-attestation-bindings/src/: lib.rs
kotlin-attestation-bindings/: Cargo.toml  build-libs.sh
kotlin-attestation-bindings/src/: bindings.udl  lib.rs
kotlin-attestation-bindings/src/uniffi/bindings/: bindings.kt
node-attestation-bindings/: .gitignore  .npmignore  Cargo.toml  Makefile.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml
node-attestation-bindings/__test__/: index.spec.mjs
node-attestation-bindings/npm/android-arm-eabi/: README.md  package.json
node-attestation-bindings/npm/android-arm64/: README.md  package.json
node-attestation-bindings/npm/darwin-arm64/: README.md  package.json
node-attestation-bindings/npm/darwin-universal/: README.md  package.json
node-attestation-bindings/npm/darwin-x64/: README.md  package.json
node-attestation-bindings/npm/freebsd-x64/: README.md  package.json
node-attestation-bindings/npm/linux-arm-gnueabihf/: README.md  package.json
node-attestation-bindings/npm/linux-arm64-gnu/: README.md  package.json
node-attestation-bindings/npm/linux-arm64-musl/: README.md  package.json
node-attestation-bindings/npm/linux-x64-gnu/: README.md  package.json
node-attestation-bindings/npm/linux-x64-musl/: README.md  package.json
node-attestation-bindings/npm/win32-arm64-msvc/: README.md  package.json
node-attestation-bindings/npm/win32-ia32-msvc/: README.md  package.json
node-attestation-bindings/npm/win32-x64-msvc/: README.md  package.json
node-attestation-bindings/src/: lib.rs
python-attestation-bindings/: Cargo.toml  Makefile.toml  README.md  pyproject.toml  test.crt
python-attestation-bindings/src/: lib.rs
python-attestation-bindings/tests/: test_attestation.py
src/: lib.rs
swift-attestation-bindings/: AttestationBindings.h  Cargo.toml  Info.plist  README.md  build-xcframework.sh  module.modulemap
swift-attestation-bindings/ios/: AttestationBindingsRustFFI.h  Info.plist
swift-attestation-bindings/src/: lib.rs
test-data/: debug-mode-cert-containing-attestation-doc-18-1-23.pem  valid-attestation-doc-base64  valid-attestation-doc-v2-bytes  valid-cage-cert  valid-cage-cert.crt
test-files/: debug-mode-attestation-doc-bytes  valid-attestation-doc-bytes
test-specs/: valid_attestation_doc_check_pcr8_only_time_sensitive.json  valid_attestation_doc_in_cert_der_encoding_time_sensitive.json  valid_attestation_doc_in_cert_incorrect_pcrs_time_sensitive.json  valid_attestation_doc_in_cert_time_sensitive.json  valid_attestation_doc_in_non_debug_mode_with_correct_pcrs_time_sensitive.json
test-specs/beta/: valid_attestation_doc_check_pcr8_only_time_sensitive.json  valid_attestation_doc_in_cert_der_encoding_time_sensitive.json  valid_attestation_doc_in_cert_incorrect_pcrs_time_sensitive.json  valid_attestation_doc_in_cert_time_sensitive.json  valid_attestation_doc_in_non_debug_mode_with_correct_pcrs_time_sensitive.json
test-specs/ga/: valid_attestation_doc_ga.json
wasm-attestation-bindings/: Cargo.toml  README.md  example.html  package.json
wasm-attestation-bindings/src/: lib.rs
