[package]
name = "attestation-doc-validation"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = "0.5.0"
aws-nitro-enclaves-nsm-api = "0.2.1"
openssl = "0.10.41"
thiserror = "1.0"
serde_cbor = "0.11"
hex = "0.4.3"
