[package]
name = "attestation-doc-validation"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = "0.5.0"
aws-nitro-enclaves-nsm-api = "0.2.1"
openssl = "0.10.41"
thiserror = "1.0"
serde_cbor = "0.11"
hex = "0.4.3"
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "attestation_doc_validation"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]
