[package]
name = "attestation-doc-validation"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for attesting enclaves according to the Evervault Attestation scheme. This crate is used to generate ffi bindings."
homepage = "https://github.com/evervault/attestation-doc-validation"
documentation = "https://docs.rs/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"
readme = "README.md"
keywords = ["aws", "nitro-enclaves", "enclaves", "attestation", "evervault"]
categories = ["cryptography", "development-tools::ffi", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = "0.5.0"
openssl = "0.10.41"
thiserror = "1.0"
serde_cbor = "0.11"
hex = "0.4.3"
base64 = "0.21"
serde_bytes = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"

[dev-dependencies]
rcgen = "0.10"
base64 = "0.21"
serde_json = "1"
serde = { version = "1.0.152", features = ["derive"] }