[package]
name = "attestation-doc-validation"
version = "0.6.3"
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for attesting enclaves according to the Evervault Attestation scheme. This crate is used to generate ffi bindings."
homepage = "https://github.com/evervault/attestation-doc-validation"
documentation = "https://docs.rs/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"
readme = "README.md"
keywords = ["aws", "nitro-enclaves", "enclaves", "attestation", "evervault"]
categories = ["cryptography", "development-tools::ffi", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = { version = "0.5.0", default-features = false }
thiserror = "1.0"
serde_cbor = "0.11"
hex = "0.4.3"
base64 = "0.21"
serde_bytes = "0.11"
serde = { version = "=1.0.180", features = ["derive"] }
serde_with = "2.2"
webpki = { version = "0.22", features = ["alloc"] }
x509-parser = "0.14.0"
der = { version = "0.6", features = ["alloc","derive","oid"] }
p256 = { version = "0.12.0", features = ["ecdsa"] }
p384 = { version = "0.12.0", features = ["ecdsa","arithmetic"] }
ecdsa = { version = "0.15.0", features = ["verifying"] }
sha2 = "0.10.6"
aes = "0.8.2"
aes-gcm = "0.10.1"
rand = { version = "0.8.5", features = ["getrandom"] }
chrono = "0.4.26"

[dev-dependencies]
rcgen = "0.10"
base64 = "0.21"
serde_json = "1"
pem = "1.1.1"
