[package]
name = "attestation-doc-validation"
version = "0.10.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust library for attesting enclaves according to the Evervault Attestation scheme. This crate is used to generate ffi bindings."
homepage = "https://github.com/evervault/attestation-doc-validation"
documentation = "https://docs.rs/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"
readme = "README.md"
keywords = ["aws", "nitro-enclaves", "enclaves", "attestation", "evervault"]
categories = ["cryptography", "development-tools::ffi", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-nitro-enclaves-cose = { version = "0.5.1", default-features = false }
thiserror = "1.0"
serde_cbor = "0.11"
hex = "0.4.3"
base64 = "0.21"
serde_bytes = "0.11"
serde = { version = "1.0.180", features = ["derive"] }
serde_with = "2.2"
webpki = { version = "0.22", features = ["alloc"] }
x509-parser = "0.14.0"
der = { version = "^0.7", features = ["alloc","derive","oid"] }
p256 = { version = "^0.13", features = ["ecdsa"] }
p384 = { version = "^0.13", features = ["ecdsa","arithmetic"] }
ecdsa = { version = "^0.16", features = ["verifying"] }
sha2 = "^0.10"
aes = "^0.8"
aes-gcm = "^0.10"
rand = { version = "^0.8", features = ["getrandom"] }
chrono = "0.4.26"
aws-nitro-enclaves-nsm-api = { version = "^0.4", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Override indirect dependency of rand to force getrandom to have wasm support
getrandom = { version = "0.2", features = ["js"] }
# Add wasm support to time
time = { version = "0.3", features = ["wasm-bindgen"] }
# Include wasm bindings to create a time-shim module
wasm-bindgen = { version = "0.2.99" }

[dev-dependencies]
rcgen = "0.10"
base64 = "0.21"
serde_json = "1"
pem = "3.0.4"
