[package]
name = "kotlin-attestation-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "bindings"
crate-type = ["cdylib"]

[dependencies]
attestation-doc-validation = "0.10.0"
uniffi = { version = "0.28.0" }

[build-dependencies]
uniffi = { version = "0.28.0", features = [ "build" ] }


#[target.'cfg(target_os="android")'.dependencies]
#jni = { version = "0.20", default-features = false }
