[package]
edition = "2021"
name = "node-attestation-bindings"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.6", default-features = false, features = ["napi4"] }
napi-derive = "2.9.4"
attestation-doc-validation = { path = "../attestation-doc-validation" }

[build-dependencies]
napi-build = "2.0.1"
