[package]
edition = "2021"
name = "node-attestation-bindings"
version = "0.0.0"
license = "Apache-2.0"
description = "A Node library for attesting Nitro Enclaves according to the Evervault Enclaves attestation protocol."
homepage = "https://github.com/evervault/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.6", default-features = false, features = ["napi4"] }
napi-derive = "2.16.11"
attestation-doc-validation = "0.6.3"

[build-dependencies]
napi-build = "2.0.1"
