[package]
name = "python-attestation-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_attestation_bindings"
crate-type = ["cdylib"]

[dependencies]
attestation-doc-validation = { path = "../attestation-doc-validation" }
pyo3 = { version = "0.18", features = ["extension-module"] }
