[package]
name = "python-attestation-bindings"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "A Python library for attesting Nitro Enclaves according to the Evervault Cages attestation protocol."
homepage = "https://github.com/evervault/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_attestation_bindings"
crate-type = ["cdylib"]

[dependencies]
attestation-doc-validation = { version = "0.5.0-beta" }
pyo3 = { version = "0.18", features = ["extension-module"] }
