[build-system]
requires = ["maturin>=0.13,<0.15"]
build-backend = "maturin"

[project]
name = "evervault_attestation_bindings"
version = "0.1.0a5"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


