[package]
edition = "2021"
name = "swift-attestation-bindings"
version = "0.0.0"
license = "Apache-2.0"
description = "A Node library for attesting Nitro Enclaves according to the Evervault Cages attestation protocol."
homepage = "https://github.com/evervault/attestation-doc-validation"
repository = "https://github.com/evervault/attestation-doc-validation"

[lib]
crate-type = ["staticlib"]

[dependencies]
attestation-doc-validation = "0.10.0"
