[package]
authors = ["Evervault Engineering engineering@evervault.com"]
edition = "2021"
name = "wasm-attestation-bindings"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
attestation-doc-validation = { path = "../attestation-doc-validation" }
base64 = "0.22.1"
wasm-bindgen = "0.2.99"