[package]
authors = ["Evervault Engineering engineering@evervault.com"]
edition = "2021"
name = "wasm-attestation-bindings"
publish = false
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
attestation-doc-validation = { version = "0.10.0" }
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"

