[package]
authors = ["Evervault Engineering engineering@evervault.com"]
edition = "2021"
name = "wasm-attestation-bindings"
publish = false
version = "0.3.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
attestation-doc-validation = { path = "../attestation-doc-validation" }
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"

